@@ -594,6 +594,8 @@ MAKEREQUESTHELP           = Path to certificatechain about to sign CA (PEM forma
 
 MODIFYEXISTINGUSERS       = Modify Existing Users
 
+MSTEMPLATE                = Microsoft Template Value
+
 MUSTENTERAUTHCODE         = You must enter an authentication code. 
 
 MUSTSELECTATLEASTONEFIELD = You must select at least one DN field to match LDAP DN. 
@@ -627,6 +629,8 @@ ONLYDECNUMBERSINCRLPERIOD = Only decimal numbers are allowed in CRL period field
 ONLYDECNUMBERSINVALIDITY  = Only decimal numbers are allowed in validity field.
 
 ONLYTHEPUBLICKEY          = Only the public key is used from the certificate request
+
+ONLYVALUE                 = (Only the value not the actual template)
 
 OTHERDATA                 = Other Data
 
@@ -717,6 +721,8 @@ USERACCOUNTCONTROL        = User Account Control
 USERCERTIFICATEATTR       = User Certificate Attribute
 
 USERDESCRIPTION           = User Description
+
+USEMSTEMPLATE             = Use MS Template Value
 
 USEROBJECTCLASS           = User Object Class
 
